--- a/website/releases.json
+++ b/website/releases.json
@@ -1,15 +1,15 @@
 {
   "releases": [
     {
-      "image": "../img/release/FIFTH - Traverse EP.jpg",
+      "image": "img/release/FIFTH - Traverse EP.jpg",
       "title": "Traverse EP"
     },
     {
-      "image": "../img/release/TRANS_T, FIFTH - Cycles.jpg",
+      "image": "img/release/TRANS_T, FIFTH - Cycles.jpg",
       "title": "Cycles"
     },
     {
-      "image": "../img/release/FIFTH - Sonder.jpg",
+      "image": "img/release/FIFTH - Sonder.jpg",
       "title": "Sonder"
     }
   ]
